Fix spacing and style index, food, order page

--- a/styles/foods.scss
+++ b/styles/foods.scss
@@ -237,9 +237,9 @@ a {
 
 .total-cost {
   border-top: 3px solid black;
-
+  padding-top: 1rem;
   #total-price{
-    margin-left: 67%;
+    margin-left: 64%;
   }
 
 }
