--- a/styles/orders.scss
+++ b/styles/orders.scss
@@ -118,7 +118,7 @@ body {
     transform: translate(-50%, -50%);
     background-color: white;
     padding: 1rem 5rem 5rem 5rem;
-    width: 30vw;
+    width: 50vw;
     border-radius: 0.5rem;
     text-align: left;
 
@@ -149,7 +149,7 @@ body {
 
   .close-button {
     position: relative;
-    left: 30.5vw;
+    left: 50vw;
     padding: 5px 15px;
     text-align: center;
     cursor: pointer;
